--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@
 body {
   grid-template-columns: repeat(12, 1fr);
   font-family: 'Poppins';
+  width: 100%;
 }
 .home,
 .contact,
@@ -52,7 +53,7 @@ nav a {
 .welcome {
   margin-top: 30px;
   grid-column: 4 / span 9;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   line-height: 1.5em;
   font-weight: 800;
   width: 100%;
@@ -65,7 +66,11 @@ nav a {
   font-weight: 800;
   font-family: Poppins;
 }
+.welcome h2 {
+  margin-bottom: 40px;
+}
 .welcome p {
+  /* min-width: 300px; */
   max-width: 860px;
 }
 
@@ -275,29 +280,22 @@ form button {
   grid-row: 2, span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
-  grid-auto-rows: 1fr 1fr;
+  grid-auto-rows: 1fr 2fr;
 }
 .products-row.one {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: span;
-  height: 100%;
+  width: 100%;
+  /* height: 100%; */
   position: relative;
   grid-row: 1 / span 1;
   grid-column: span 1;
-  margin-top: 10px;
+  grid-auto-rows: 1fr;
+  margin-top: 30px;
 }
 .products-row.two {
-  grid-row: 2 / span 1;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  width: span;
-  height: 100%;
-  position: relative;
-  grid-column: span 1;
-  margin-top: 10px;
+  max-width: 100%;
 }
-
 .products-card {
   display: flex;
   grid-column: span 1;
@@ -306,8 +304,7 @@ form button {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  min-height: 800px;
-  max-height: 100%;
+  grid-row: span 1;
   position: relative;
 }
 .products-card img {
@@ -318,10 +315,9 @@ form button {
 }
 .products-card a {
   text-decoration: none;
-  justify-self: center;
   align-self: center;
   position: absolute;
-  top: 200px;
+  top: 60%;
   font-size: 3em;
   font-weight: 800;
   color: black;
@@ -353,7 +349,7 @@ form button {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .drop-down-menu {
-  height: 800px;
+  max-height: 800px;
   width: 100%;
   font-size: 1em;
   font-weight: 800;
@@ -365,11 +361,12 @@ form button {
   grid-column: span 4;
   grid-row: span 1;
   align-self: center;
-  padding: 10px;
+  padding: 20px;
   box-sizing: border-box;
   z-index: -1;
   gap: 50px;
   margin: 0;
+  align-self: start;
 }
 
 .hidden {
@@ -403,6 +400,8 @@ form button {
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr;
   text-align: center;
+  width: 200px;
+  height: 200px;
 }
 .product-image {
   transition: all 1.5s ease-in-out;
@@ -410,22 +409,17 @@ form button {
   grid-row: span 1;
 }
 .product-paragraph {
-  grid-column: 3 / span 3;
+  grid-column: 1 / span 3;
   font-size: 1.5em;
   line-height: 1.5em;
   font-weight: 800;
+  max-width: 100%;
 }
-/* .menu-cell ul {
-  text-align: ;
-  margin-left: 50px; 
-  margin-top: 10px;
-  text-decoration: none;
-  font-size: 1em;
-  font-weight: 800;
-  grid-column: 4 / span 1;
-} */
+.drop-down-menu ul {
+  grid-column: span 3;
+}
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1279px) {
   .welcome h1 {
     font-size: 3em;
   }
@@ -452,7 +446,8 @@ form button {
     height: 80px;
     width: 80px;
   }
-  .card {
+  .card,
+  .products-card {
     font-size: 0.8em;
   }
   header nav {
@@ -488,6 +483,17 @@ form button {
   }
   .card button {
     max-width: 100%;
+  }
+  .products-card {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .product-paragraph {
+    grid-column: span 5;
+  }
+  .menu-cell {
+    width: 200px;
+    height: 100px;
   }
   .history {
     display: grid;
@@ -539,9 +545,13 @@ form button {
   }
   .welcome {
     grid-column: 2 / span 12;
+    line-height: 1.25;
   }
   .welcome h1 {
     font-size: 2em;
+  }
+  .welcome h2 {
+    font-size: 1.4em;
   }
   .welcome img {
     height: 60px;
@@ -549,7 +559,8 @@ form button {
   }
   .home header nav,
   .five-year header nav,
-  .contact header nav {
+  .contact header nav,
+  .products-body header nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-self: start;
@@ -558,7 +569,8 @@ form button {
   }
   .home header nav a,
   .five-year header nav a,
-  .contact header nav a {
+  .contact header nav a,
+  .products-body header nav a {
     grid-column: 1 / span 2;
     margin-right: 10px;
     justify-self: start;
@@ -572,11 +584,31 @@ form button {
   #message {
     grid-column: 8 / span 5;
   }
+  .drop-down-menu {
+    gap: 30px;
+  }
+  .menu-cell {
+    width: 150px;
+    height: 75px;
+  }
 }
 @media screen and (max-width: 390px) {
   .card {
     grid-column: span 12;
     font-size: 1em;
+  }
+
+  .products-card {
+    grid-column: span 4;
+  }
+  .product-paragraph {
+    grid-column: span 6;
+    font-size: 1em;
+  }
+  .menu-cell {
+    grid-column: span 3;
+    width: 125px;
+    height: 62px;
   }
   .welcome img {
     height: 40px;
