--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,8 @@ body {
 
 .home,
 .contact,
-.five-year {
+.five-year,
+.products-body {
   background-image: url('images/hero-image-min.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -19,6 +20,7 @@ body {
   background-color: #889696;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  background-position: fixed;
 }
 a {
   text-decoration: none;
@@ -37,7 +39,7 @@ header nav {
   padding: 10px;
   display: flex;
   font-size: 2em;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 nav a {
   justify-self: end;
@@ -438,7 +440,6 @@ form button {
   }
   header nav {
     grid-column: 2 / span 9;
-    justify-content: space-between;
   }
   .panel.introduction nav {
     font-size: 0.7em;
