fourteenth commit fix overscroll

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  overscroll-behavior: none;
+  overscroll-behavior-block: none;
 }
 body {
   grid-template-columns: repeat(12, 1fr);
