--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ body {
   grid-template-columns: repeat(12, 1fr);
   font-family: 'Poppins';
   width: 100%;
+  height: 100%;
 }
 
 .home,
@@ -283,7 +284,7 @@ form button {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-row: 2, span 1;
+  grid-row: 2 / span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr 2fr;
