--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,8 @@ body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   background-position: fixed;
+  width: 100%;
+  height: 100%;
 }
 a {
   text-decoration: none;
@@ -266,28 +268,13 @@ form button {
   padding: 10px;
 }
 
-.products-body {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  background-image: url('images/hero-image-min.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-blend-mode: screen;
-  background-color: #889696;
-}
-
 .products-main {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-row: 2 / span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
-  grid-auto-rows: 1fr 2fr;
+  grid-auto-rows: 1fr 1fr;
 }
 .products-row.one {
   display: grid;
@@ -301,6 +288,7 @@ form button {
 }
 .products-row.two {
   max-width: 100%;
+  display: grid;
 }
 .products-card {
   display: flex;
@@ -322,7 +310,7 @@ form button {
   text-decoration: none;
   align-self: center;
   position: absolute;
-  top: 75%;
+  top: 240px;
   font-size: 2.5em;
   font-weight: 800;
   color: white;
@@ -366,13 +354,12 @@ form button {
   grid-auto-rows: max-content;
   grid-column: span 4;
   grid-row: span 1;
-  align-self: center;
   padding: 20px;
   box-sizing: border-box;
-  z-index: -1;
   gap: 50px;
   margin: 0;
   align-self: start;
+  justify-self: start;
 }
 
 .hidden {
@@ -450,6 +437,10 @@ form button {
   }
   .panel.introduction h1 {
     font-size: 3em;
+  }
+  .products-card a {
+    position: absolute;
+    top: 220px;
   }
 }
 
@@ -612,6 +603,10 @@ form button {
   .menu-button {
     margin-top: 40px;
   }
+  .products-card a {
+    position: absolute;
+    top: 155px;
+  }
 }
 @media screen and (max-width: 390px) {
   .card {
@@ -652,5 +647,9 @@ form button {
   }
   form button {
     grid-column: 5 / span 4;
+  }
+  .products-card a {
+    position: absolute;
+    top: 200px;
   }
 }
