--- a/public/style.css
+++ b/public/style.css
@@ -274,7 +274,7 @@ form button {
   display: grid;
   grid-column: span 12;
   grid-template-columns: 1fr;
-  grid-auto-rows: 1fr 1fr;
+  grid-auto-rows: 1fr 1.2fr;
 }
 .products-row.one {
   display: grid;
@@ -289,6 +289,7 @@ form button {
 .products-row.two {
   max-width: 100%;
   display: grid;
+  grid-row: 2 / span 1;
 }
 .products-card {
   display: flex;
