--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,7 @@
 body {
   grid-template-columns: repeat(12, 1fr);
   font-family: 'Poppins';
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .home,
@@ -343,7 +342,7 @@ form button {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .drop-down-menu {
-  max-height: 800px;
+  max-height: 600px;
   width: 100%;
   font-size: 1em;
   font-weight: 800;
@@ -352,9 +351,9 @@ form button {
   justify-content: center;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: max-content;
+  grid-auto-rows: 1fr;
   grid-column: span 4;
-  grid-row: span 1;
+  grid-row: 1 / span 1;
   padding: 20px;
   box-sizing: border-box;
   gap: 50px;
@@ -441,7 +440,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 220px;
+    top: 200px;
   }
 }
 
