--- a/public/style.css
+++ b/public/style.css
@@ -23,8 +23,6 @@ body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   background-position: fixed;
-  width: 100%;
-  height: 100%;
 }
 a {
   text-decoration: none;
@@ -284,11 +282,13 @@ form button {
   grid-column: span 1;
   grid-auto-rows: 1fr;
   margin-top: 30px;
+  align-items: center;
 }
 .products-row.two {
   max-width: 100%;
   display: grid;
   grid-row: 2 / span 1;
+  grid-template-columns: repeat(4, 1fr);
 }
 .products-card {
   display: flex;
@@ -440,7 +440,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 200px;
+    top: 180px;
   }
 }
 
@@ -627,7 +627,7 @@ form button {
     height: 62px;
   }
   .drop-down-menu ul {
-    grid-column: span 5;
+    grid-column: span 6;
   }
   .welcome img {
     height: 40px;
