--- a/public/style.css
+++ b/public/style.css
@@ -352,7 +352,7 @@ form button {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: 1fr;
-  grid-column: span 4;
+  grid-column: 1 / span 4;
   grid-row: 1 / span 1;
   padding: 20px;
   box-sizing: border-box;
@@ -440,7 +440,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 180px;
+    top: 150px;
   }
 }
 
