--- a/public/style.css
+++ b/public/style.css
@@ -7,14 +7,15 @@
 body {
   grid-template-columns: repeat(12, 1fr);
   font-family: 'Poppins';
-  min-height: 100vh;
+  /* min-height: 120vh; */
+  max-height: 130vh;
 }
 
 .home,
 .contact,
 .five-year,
 .products-body {
-  background-image: url('images/hero-image-min.jpg');
+  background-image: url('images/hero-image-min-min.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -75,7 +76,6 @@ nav a {
   margin-bottom: 40px;
 }
 .welcome p {
-  /* min-width: 300px; */
   max-width: 860px;
 }
 
@@ -88,40 +88,71 @@ nav a:hover {
   color: #fff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
-.card {
-  grid-column: span 4;
-  max-width: 100%;
-  height: 260px;
-  background-color: #ddd;
-  border-radius: 6px;
-  padding: 15px;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.6);
-  line-height: 1.5em;
-  margin-top: 80px;
-  margin-left: 40px;
-  margin-right: 20px;
-  font-size: 1em;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+
+.slider-row {
+  grid-column: span 12;
+  width: 100%;
+  height: 420px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  font-weight: 800;
-  opacity: 0.7;
 }
 
-button {
+.slide-button {
+  width: 50px;
+  height: 60px;
+  background: transparent;
+  border: none;
+  font-weight: 800;
+  font-size: 4em;
+}
+.previous {
+  position: absolute;
+  bottom: 40px;
+}
+.next {
+  position: absolute;
+  bottom: 40px;
+  right: 15px;
+}
+.slider {
+  width: 700px;
+  height: 420px;
+  grid-column: 2 / span 1;
+  position: relative;
+  overflow: hidden;
+}
+.slide {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: transform 1s;
+}
+.slide > img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.contact-button {
   width: 200px;
   height: 50px;
   border-radius: 6px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
   font-weight: 800;
 }
-button:hover {
+.contact button:hover {
   filter: brightness(1.8);
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-}
-#projects-card button {
-  margin-bottom: 5px;
 }
 .warranty {
   background-color: #ddd;
@@ -267,8 +298,9 @@ form button {
 
 .products-main {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   display: grid;
+  grid-row: span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr 1.2fr;
@@ -310,7 +342,7 @@ form button {
   text-decoration: none;
   align-self: center;
   position: absolute;
-  top: 240px;
+  top: 220px;
   font-size: 2.5em;
   font-weight: 800;
   color: white;
@@ -370,11 +402,11 @@ form button {
 .menu-button {
   height: 50px;
   width: 100px;
-  font-size: 2em;
+  font-size: 4em;
   background-color: transparent;
   border: none;
   box-shadow: none;
-  opacity: 0.3;
+  opacity: 0.5;
   transition: height 700ms, ease-in, width 700ms ease-in,
     font-size 700ms ease-in;
 }
@@ -422,6 +454,9 @@ form button {
 }
 
 @media screen and (max-width: 1279px) {
+  .welcome {
+    margin-top: 20px;
+  }
   .welcome h1 {
     font-size: 3em;
   }
@@ -440,7 +475,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 150px;
+    top: 180px;
   }
 }
 
@@ -452,7 +487,6 @@ form button {
     height: 80px;
     width: 80px;
   }
-  .card,
   .products-card {
     font-size: 0.8em;
   }
@@ -483,18 +517,16 @@ form button {
   .welcome h1 {
     font-size: 2em;
   }
-  .card {
-    font-size: 0.7em;
-  }
-  .card button {
-    max-width: 100%;
-  }
   .products-card {
     grid-column: span 2;
     grid-row: span 1;
   }
   .product-paragraph {
     grid-column: span 5;
+  }
+  .products-card a {
+    position: absolute;
+    top: 180px;
   }
   .menu-cell {
     width: 200px;
@@ -525,14 +557,6 @@ form button {
     justify-self: center;
     max-width: 100%;
   }
-  .card {
-    margin-right: 20px;
-    margin-left: 20px;
-    padding: 5px;
-  }
-  li {
-    margin-left: 10px;
-  }
 }
 @media screen and (max-width: 576px) {
   header nav a {
@@ -547,10 +571,6 @@ form button {
   }
   .panel.introduction footer {
     margin-top: 40px;
-  }
-  .card {
-    margin-left: 10px;
-    margin-right: 10px;
   }
   .welcome {
     grid-column: 2 / span 12;
@@ -605,15 +625,10 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 155px;
+    top: 125px;
   }
 }
 @media screen and (max-width: 390px) {
-  .card {
-    grid-column: span 12;
-    font-size: 1em;
-  }
-
   .products-card {
     grid-column: span 4;
   }
