--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,8 @@
 body {
   grid-template-columns: repeat(12, 1fr);
   font-family: 'Poppins';
-  /* min-height: 120vh; */
-  max-height: 130vh;
+  min-height: 80vh;
+  max-height: 100vh;
 }
 
 .home,
@@ -303,7 +303,7 @@ form button {
   grid-row: span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
-  grid-auto-rows: 1fr 1.2fr;
+  grid-auto-rows: 1fr 1fr 1fr;
 }
 .products-row.one {
   display: grid;
@@ -326,12 +326,13 @@ form button {
   display: flex;
   grid-column: span 1;
   flex-direction: column;
-  grid-row: span 1;
+  grid-column: span 1;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   grid-row: span 1;
   position: relative;
+  max-width: 100%;
 }
 .products-card img {
   object-fit: scale-down;
@@ -374,7 +375,7 @@ form button {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .drop-down-menu {
-  max-height: 600px;
+  max-height: 300px;
   width: 100%;
   font-size: 1em;
   font-weight: 800;
@@ -475,7 +476,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 180px;
+    top: 160px;
   }
 }
 
@@ -557,6 +558,10 @@ form button {
     justify-self: center;
     max-width: 100%;
   }
+  .slider {
+    width: 500px;
+    height: 300px;
+  }
 }
 @media screen and (max-width: 576px) {
   header nav a {
@@ -627,6 +632,13 @@ form button {
     position: absolute;
     top: 125px;
   }
+  .slider {
+    width: 400px;
+    height: 280px;
+  }
+  .drop-down-menu ul {
+    grid-column: span 6;
+  }
 }
 @media screen and (max-width: 390px) {
   .products-card {
@@ -641,9 +653,7 @@ form button {
     width: 125px;
     height: 62px;
   }
-  .drop-down-menu ul {
-    grid-column: span 6;
-  }
+
   .welcome img {
     height: 40px;
     width: 40px;
@@ -666,5 +676,9 @@ form button {
   .products-card a {
     position: absolute;
     top: 200px;
+  }
+  .slider {
+    width: 380px;
+    height: 230px;
   }
 }
