--- a/public/style.css
+++ b/public/style.css
@@ -454,7 +454,7 @@ form button {
     font-size 700ms ease-in;
 }
 
-@media screen and (max-width: 1279px) {
+/* @media screen and (max-width: 1279px) {
   .welcome {
     margin-top: 20px;
   }
@@ -478,9 +478,9 @@ form button {
     position: absolute;
     top: 160px;
   }
-}
+} */
 
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
   .welcome h1 {
     font-size: 2.5em;
   }
@@ -513,8 +513,8 @@ form button {
   #message {
     grid-column: 7 / span 5;
   }
-}
-@media screen and (max-width: 768px) {
+} */
+/* @media screen and (max-width: 768px) {
   .welcome h1 {
     font-size: 2em;
   }
@@ -562,8 +562,8 @@ form button {
     width: 500px;
     height: 300px;
   }
-}
-@media screen and (max-width: 576px) {
+} */
+/* @media screen and (max-width: 576px) {
   header nav a {
     font-size: 0.8em;
   }
@@ -639,8 +639,8 @@ form button {
   .drop-down-menu ul {
     grid-column: span 6;
   }
-}
-@media screen and (max-width: 390px) {
+} */
+/* @media screen and (max-width: 390px) {
   .products-card {
     grid-column: span 4;
   }
@@ -681,4 +681,4 @@ form button {
     width: 380px;
     height: 230px;
   }
-}
+} */
