--- a/public/media3.css
+++ b/public/media3.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .welcome h1 {
     font-size: 2em;
   }
@@ -46,4 +46,4 @@
     width: 500px;
     height: 300px;
   }
-}
+} */
