--- a/public/media4.css
+++ b/public/media4.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 576px) {
+/* @media screen and (max-width: 576px) {
   header nav a {
     font-size: 0.8em;
   }
@@ -74,4 +74,4 @@
   .drop-down-menu ul {
     grid-column: span 6;
   }
-}
+} */
