--- a/public/media5.css
+++ b/public/media5.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 390px) {
+/* @media screen and (max-width: 390px) {
   .products-card {
     grid-column: span 4;
   }
@@ -39,4 +39,4 @@
     width: 380px;
     height: 230px;
   }
-}
+} */
