--- a/public/media1.css
+++ b/public/media1.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1279px) {
+/* @media screen and (max-width: 1279px) {
   .welcome {
     margin-top: 20px;
   }
@@ -22,4 +22,4 @@
     position: absolute;
     top: 160px;
   }
-}
+} */
