--- a/public/media2.css
+++ b/public/media2.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
   .welcome h1 {
     font-size: 2.5em;
   }
@@ -31,4 +31,4 @@
   #message {
     grid-column: 7 / span 5;
   }
-}
+} */
