--- a/public/style.css
+++ b/public/style.css
@@ -642,7 +642,7 @@ form button {
     grid-column: span 6;
   }
 }
-@media screen and (max-width: 390px), screen and (orientation: portrait) {
+@media screen and (max-width: 390px){
   .products-card {
     grid-column: span 4;
   }
