--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,9 @@ body {
   grid-template-columns: repeat(12, 1fr);
   background-position: fixed;
 }
+.products-body {
+  grid-auto-rows: 1fr 1fr;
+}
 a {
   text-decoration: none;
   color: black;
@@ -307,12 +310,12 @@ form button {
   grid-row: span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
-  grid-auto-rows: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr 1fr;
 }
 .products-row.one {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 100%;
+  max-width: 100%;
   position: relative;
   grid-row: 1 / span 1;
   grid-column: span 1;
@@ -325,6 +328,7 @@ form button {
   display: grid;
   grid-row: 2 / span 1;
   grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
 }
 .products-card {
   display: flex;
@@ -339,15 +343,17 @@ form button {
   max-width: 100%;
 }
 .products-card img {
-  object-fit: scale-down;
+  object-fit: cover;
   z-index: -1;
   grid-column: span 1;
+  max-width: 100%;
+  max-height: 100%;
 }
 .products-card a {
   text-decoration: none;
   align-self: center;
   position: absolute;
-  top: 220px;
+  top: 190px;
   font-size: 2.5em;
   font-weight: 800;
   color: white;
@@ -379,7 +385,8 @@ form button {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .drop-down-menu {
-  max-height: 300px;
+  max-height: 100%;
+  height: 300px;
   width: 100%;
   font-size: 1em;
   font-weight: 800;
@@ -447,6 +454,7 @@ form button {
   grid-column: 1 / span 3;
   font-size: 1.25em;
   line-height: 1.25em;
+  max-height: 100%;
   font-weight: 800;
   max-width: 100%;
   transition: height 700ms, ease-in, width 700ms ease-in,
@@ -456,6 +464,8 @@ form button {
   grid-column: span 3;
   transition: height 700ms, ease-in, width 700ms ease-in,
     font-size 700ms ease-in;
+  max-width: 100%;
+  max-height: 100%;
 }
 @media screen and (max-width: 1279px) {
   .welcome {
@@ -479,7 +489,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 160px;
+    top: 150px;
   }
 }
 @media screen and (max-width: 992px), screen and (orientation: portrait) {
@@ -492,6 +502,10 @@ form button {
   }
   .products-card {
     font-size: 0.8em;
+  }
+  .products-card a {
+    position: absolute;
+    top: 130px;
   }
   header nav {
     grid-column: 1 / span 12;
@@ -529,7 +543,7 @@ form button {
   }
   .products-card a {
     position: absolute;
-    top: 180px;
+    top: 170px;
   }
   .menu-cell {
     width: 200px;
@@ -565,7 +579,7 @@ form button {
     height: 300px;
   }
 }
-@media screen and (max-width: 576px), screen and (orientation: portrait) {
+@media screen and (max-width: 576px) {
   header nav a {
     font-size: 0.8em;
   }
@@ -642,7 +656,7 @@ form button {
     grid-column: span 6;
   }
 }
-@media screen and (max-width: 390px), screen and (orientation: portrait) {
+@media screen and (max-width: 390px) {
   .products-card {
     grid-column: span 4;
   }
