--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,7 @@
 body {
   grid-template-columns: repeat(12, 1fr);
   font-family: 'Poppins';
-  min-height: 80vh;
-  max-height: 100vh;
+  max-height: 1864px;
 }
 
 .home,
@@ -23,11 +22,8 @@ body {
   background-color: #889696;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  background-position: fixed;
 }
-.products-body {
-  grid-auto-rows: 1fr 1fr;
-}
+
 a {
   text-decoration: none;
   color: black;
@@ -196,6 +192,7 @@ form {
   background-color: #ddd;
   opacity: 0.8;
   grid-column: 2 / span 10;
+  box-sizing: border-box;
   margin: 0 auto;
   position: relative;
   top: 50px;
@@ -305,12 +302,11 @@ form button {
 
 .products-main {
   width: 100%;
-  max-height: 100%;
+  max-height: 1300px;
   display: grid;
-  grid-row: span 1;
   grid-column: span 12;
   grid-template-columns: 1fr;
-  grid-auto-rows: 1fr 1fr;
+  grid-auto-rows: 1fr;
 }
 .products-row.one {
   display: grid;
@@ -326,7 +322,7 @@ form button {
 .products-row.two {
   max-width: 100%;
   display: grid;
-  grid-row: 2 / span 1;
+  grid-row: 2 / span 2;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
 }
@@ -385,7 +381,7 @@ form button {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .drop-down-menu {
-  max-height: 280px;
+  max-height: 300px;
   width: 100%;
   font-size: 1em;
   font-weight: 800;
