drop-down position absolute

--- a/public/style.css
+++ b/public/style.css
@@ -381,7 +381,7 @@ form button {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .drop-down-menu {
-  max-height: 300px;
+  max-height: 800px;
   width: 100%;
   font-size: 1em;
   font-weight: 800;
@@ -399,6 +399,7 @@ form button {
   margin: 0;
   align-self: start;
   justify-self: start;
+  position: absolute;
 }
 
 .hidden {
